chore(framework): Update to use app directory, add footer with version and source link.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "tic-tac-toe",
-  "version": "1.0.0",
+  "appTitle": "Tic-Tac-Toe",
+  "version": "1.1.0",
+  "repository": "https://github.com/adamskoog/tic-tac-toe",
   "private": true,
   "scripts": {
     "dev": "next dev",
